infra/k8s/metrics-engine.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metrics-engine
spec:
  replicas: 1
  selector:
    matchLabels:
      service: metrics-engine
  template:
    metadata:
      labels:
        service: metrics-engine
    spec:
      containers:
      - name: metrics-engine
        image: metrics-engine:latest
        imagePullPolicy: Never
