infra/k8s/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:10.0.3
        ports:
          - containerPort: 3000
        volumeMounts:
          - name: datasources
            mountPath: /etc/grafana/provisioning/datasources
          - name: dashboard-provider
            mountPath: /etc/grafana/provisioning/dashboards/provider.yaml
            subPath: dashboards.yaml
          - name: dashboards
            mountPath: /etc/grafana/provisioning/dashboards/main-dashboard.json
            subPath: main-dashboard.json
      volumes:
        - name: datasources
          configMap:
            name: grafana-datasources
        - name: dashboard-provider
          configMap:
            name: grafana-dashboard-provider
        - name: dashboards
          configMap:
            name: grafana-dashboards
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  selector:
    app: grafana
  ports:
    - port: 3000
      targetPort: 3000
