infra/k8s/processor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: processor
spec:
  replicas: 1
  selector:
    matchLabels:
      service: processor
  template:
    metadata:
      labels:
        service: processor
        app.kubernetes.io/version: "0.1.0"
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"
    spec:

      containers:
      - name: processor
        image: processor:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
          name: metrics
---
apiVersion: v1
kind: Service
metadata:
  name: processor
spec:
  selector:
    service: processor
  ports:
    - port: 8000
      targetPort: 8000
      name: metrics
